# crispr-geno

./: .gitignore  README.md  crispr-geno.command  environment.yml  pyproject.toml
install/: INSTALL.txt  install.sh
src/crispr_geno/: __init__.py  analysis.py  cli.py  phasing.py  xlsx.py
tests/: test_phasing.py
